Revision history for Algorithm-Voting

0.01
   * implemented Plurality
   * implemented Sortition (RFC 3797)
