@@ -17,6 +17,7 @@ requires:
   Params::Validate: 0
   Scalar::Util: 0
 build_requires:
+  File::Spec: 0
   Module::Build::Compat: 0
   Test::Exception: 0
   Test::More: 0
