@@ -2,6 +2,11 @@ use strict;
 use warnings;
 use Test::More;
 
+unless ($ENV{TEST_AUTHOR}) {
+    my $msg = 'Author test.  Set $ENV{TEST_AUTHOR} to a true value to run.';
+    plan(skip_all => $msg);
+}
+
 # Ensure a recent version of Test::Pod::Coverage
 my $min_tpc = 1.08;
 eval "use Test::Pod::Coverage $min_tpc";
