@@ -2,5 +2,7 @@ Revision history for Algorithm-Voting
 
 0.01
    * implemented Plurality
-   * implemented Sortition (RFC 3797)
+   * implemented Sortition according to RFC 3797
+   * 100% test coverage
+   * added Test::Perl::Critic to test suite
 
